--- a/backend/package.json
+++ b/backend/package.json
@@ -11,21 +11,22 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@smart-inventory/shared": "*",
     "cors": "^2.8.5",
     "dotenv": "^16.4.0",
-    "mongoose": "^8.0.0",
-    "@smart-inventory/shared": "*"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^8.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.0",
-    "typescript": "^5.3.0",
-    "tsx": "^4.7.0",
-    "eslint": "^8.56.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0"
+    "@typescript-eslint/parser": "^6.19.0",
+    "eslint": "^8.56.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.0"
   }
 }
-
